# smart-customer-service-system

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  LICENSE  README.md  README_EN.md  bitest.py  demo.py  front.py  graph_pic_test.py  main.py  main_bi.py  main_local.py  main_online.py  pyproject.toml  run_text2sql_tests.py  test_chromadb_simple.py
.deepeval/: .deepeval_telemetry.txt  .latest_test_run.json
agents/: __init__.py  airport_costomer_agents.py  main.py  state.py
agents/airport_service/: __init__.py  business_recommend_graph.py  graph_compile.py  main_graph.py  question_recommend_graph.py  shared_utils.py  state.py
agents/business_service/: __init__.py  graph.py  nodes.py  state.py
agents/flight_info/: __init__.py  graph.py  nodes.py  state.py
agents/knowledge_qa/: __init__.py  graph.py  nodes.py  (+1 more)
api/: __init__.py  business_recommend.py  chat.py  image_upload.py  memory_management.py  question_recommend.py  router.py  summary.py  text2qa.py  text2sql_training.py  user_profile_extraction.py
common/: __init__.py  decorators.py  image_handler.py  image_handler_usage.md  utils.py  validators.py
config/: __init__.py  dev.py  factory.py  utils.py
core/: __init__.py  config.py
data/: airport_service_graph.db  custom_graph.db
docs/: README.md  _config.yml  airport_chat_websocket_api.md  api-docs.html  api_documentation.md  architecture.html  chinese_qa_improvements.md  evaluation.html  expert-review.html  expert_review_v2.html  features.html  hybrid_profile_architecture.md  index.html  landing.html  memory-filter.html  refactoring_summary.md  retrieval_result_refactoring.md  simple_text2qa_usage.md  simplified_qa_architecture.md  smart_memory_filter_guide.md  text2qa_flexible_structure.md  text2qa_search_scoring.md  ultra_simple_qa.md  user-profile.html  user_profile_system_guide.md
eval/: example1.py  example2.py
examples/: debug_expert_qa_search.py  expert_qa_search_example.py  interactive_expert_qa_test.py  profile_extraction_example.py  simple_qa_example.py  user_profile_usage_example.py
images/: 业务办理子模块.txt  主架构.excalidraw  整体架构.txt  最总架构图.txt  知识库问答模块.txt
models/: __init__.py  schemas.py
sql2bi/: README.md  __init__.py  api_specification.md  chart_converter.py  chart_types.py  main.py  utils.py
static/: chat copy.html  chat.html  evaluation.html  expert-review.html  expert_review_v2.html  features.html  index.html  index.md  qa_test.html  user-profile.html
tests/: silicon.py  test2sqltest.py  test_chromadb.py  test_text2kb_real.py  test_text2sql_comprehensive.py  testkb.py  ts_summary.py
text2kb/: README.md  __init__.py  config.py  retrieval.py
text2sql/: __init__.py  test_embedding.py  test_llm.py  test_postgresql.py  utils.py
tools/: README.md  logo.py  train_text2qa.py  train_text2sql.py
(+135 files in other folders)
