[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[project]
name = "smart-customer-service-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "chromadb-client>=0.6.3",
    "dashscope>=1.23.3",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "langmem>=0.0.25",
    "openai>=1.78.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "ragflow-sdk>=0.18.0",
]
