[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[project]
name = "smart-customer-service-system"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "chromadb>=1.0.15",
    "chromadb-client>=1.0.15",
    "dashscope>=1.24.0",
    "deepeval>=3.1.8",
    "fastapi>=0.116.1",
    "jieba>=0.42.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.7",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-redis>=0.0.8",
    "mem0ai>=0.1.115",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "python-socks>=2.7.1",
    "ragflow-sdk>=0.18.0",
    "redis>=6.4.0",
    "schedule>=1.2.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
    "trustcall>=0.0.39",
    "websockets>=15.0.1",
]
